# elation_rust_sdk

./: .gitignore  Cargo.toml  Dockerfile  README.md
libs/client/: Cargo.toml
libs/client/src/: client.rs  config.rs  error.rs  lib.rs
libs/debug_deserialize/: Cargo.toml
libs/models/: Cargo.toml
libs/models/src/: general.rs  lib.rs  resource.rs
libs/models/src/orders/: ancillary_company.rs  cardiac_center.rs  cardiac_order.rs  cardiac_order_test.rs  imaging_center.rs  imaging_order.rs  imaging_order_test.rs  lab_order.rs  lab_order_compendium.rs  lab_order_set.rs  lab_order_test.rs  lab_vendor.rs  mod.rs  pulmonary_center.rs  pulmonary_order.rs  pulmonary_order_test.rs  sleep_center.rs  sleep_order.rs  sleep_order_test.rs
libs/models/src/patient_document/: medication.rs  report.rs
libs/models/src/patient_profile/: allergy.rs  allergy_documentation.rs  appointment_type.rs  drug_intolerance.rs  error.rs  family_history.rs  history.rs  immunization.rs  insurance_card.rs  mod.rs  patient.rs  patient_photo.rs  patient_provider_team.rs  problem.rs  vaccine.rs
libs/models/src/patient_profile/utils/: crud_fns.rs  generate_common_bmc_fns.rs  mod.rs
libs/services/: Cargo.toml
libs/services/src/: allergy_documentation_service.rs  allergy_service.rs  appointment_type_service.rs  base_service.rs  error.rs  history.rs  lib.rs  macros.rs  patient.rs  patient_service.rs  prelude.rs  problem.rs  problem_service.rs  resource_service.rs
libs/services/src/orders/: ancillary_company.rs  cardiac_center.rs  cardiac_order.rs  cardiac_order_tests.rs  imaging_center.rs  imaging_order.rs  imaging_order_test.rs  lab_order.rs  lab_order_compendium.rs  lab_order_set.rs  lab_order_test.rs  lab_vendor.rs  mod.rs  pulmonary_center.rs  pulmonary_order.rs  pulmonary_order_test.rs  sleep_center.rs  sleep_order.rs  sleep_order_test.rs
libs/services/src/patient_profile/: allergy_documentation_service.rs  allergy_service.rs  appointment_type_service.rs  drug_intolerance_service.rs  family_history_service.rs  history.rs  immunzation_service.rs  insurance_card_service.rs  mod.rs  patient_photo_service.rs  patient_provider_team_service.rs  patient_service.rs  problem_service.rs  vaccine_service.rs
libs/services/tests/: allergy_documentation_service_tests.rs  allergy_service_tests.rs  ancially_company_service_tests.rs  appointment_type_service_tests.rs  cardiac_center_service_tests.rs  cardiac_order_service_tests.rs  cardiac_order_test_service_tests.rs  drug_intolerance_tests.rs  family_history_service_tests.rs  history_service_tests.rs  imaging_center_service_tests.rs  imaging_order_service_tests.rs  imaging_order_test_service_tests.rs  immunization_service_tests.rs  insurance_card_service_tests.rs  lab_order_compendium_service_tests.rs  lab_order_service_tests.rs  lab_order_set_service_tests.rs  lab_order_test_service_tests.rs  lab_vendor_service_tests.rs  patient_photo_service_tests.rs  patient_provider_team_service_tests.rs  patient_service_tests.rs  problem_service_tests.rs  pulmonary_center_service_tests.rs  pulmonary_order_service_tests.rs  pulmonary_order_test_service_tests.rs  sleep_center_service_tests.rs  sleep_order_service_tests.rs  sleep_order_test_service_tests.rs  vaccine_service_tests.rs
libs/services/tests/temp/: allergy_documentation_service_tests.rs  drug_intolerance_tests.rs  family_history_service_tests.rs  immunization_service_tests.rs  lab_orders_service_tests.rs  vaccine_service_tests.rs
token-service/: Dockerfile
(+9 files in other folders)
