[workspace.lints.rust]

[workspace]
resolver = "2"
members = [
    "libs/client",
    "libs/models",
    "libs/services",
    "libs/utils",
    "libs/error",
    "libs/config", 
    "libs/sdk"
    , "token-service"
    , "libs/debug_deserialize"]

[workspace.dependencies]
utils = { path = "./libs/utils" }

serde = { version = "1", features = ["derive"] }
serde_with = {version = "3", features = ["json", "time_0_3"] }
serde_json = "1"

reqwest = "0.12"

time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros", "serde-well-known"] }
derive_more = {version = "1", features = ["from", "display"] }
log = "^0.4"

serial_test = "^3"

[workspace.metadata.scripts]
zip = "7z a -tzip -xr'!target' -xr'!node_modules' -xr'!dist' -xr'!.git' -xr'!.jpg' -xr'!.png' elation_rust_sdk ."
