[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils"}
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
strum = "^0"
strum_macros = "^0"
url = "2"
tokio-retry = "0.3"

serde_with = { workspace = true }
time = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
