[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
client = { path = "../client" }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
time = { workspace = true }
derive_more = { workspace = true }
